0032432: Inspectors - problems with tools test group

Adding __APPLE_ definition for libraries